# sgbackup

./: .gitattributes  .gitignore  Makefile  README.md  centos-install-requirements.sh  centos-install.sh  fedora-install-requirements.sh  fedora-install.sh  msys-install-requirements.sh  msys-install.sh  pyproject.toml  requirements.txt  setup.py
.githooks/: pre-commit
.githooks/pre-commit.d/: fix_line_endings.sh
PO/: SOURCES  UI.SOURCES  de.po
scripts/: extract_localestrings.sh  make_translations.sh  update_po.sh
sgbackup/: __init__.py  __main__.py  _import_gtk.py  _logging.py  archiver.py  command.py  epic.py  error.py  game.py  gog.py  i18n.py  logger.conf  logger.yaml  main.py  settings.py  steam.py  utility.py  version.py
sgbackup/archiver/: __init__.py  _archiver.py  tarfilearchiver.py  zipfilearchiver.py
sgbackup/commands/: __init__.py  help.py
sgbackup/gui/: __init__.py  __main__.py  _app.py  _backupdialog.py  _dialogs.py  _epic.py  _gamedialog.py  _settingsdialog.py  _steam.py  application.py  appmenu.ui  appwindow.py  backupview.py  gameview.py  settingsdialog.py
sgbackup/icons/hicolor/: org.sgabackup.sgbackup.gresource.xml
sgbackup/locale/: __init__.py
sphinx/: conf.py  index.rst  install.rst  modules.rst
sphinx/modules/: sgbackup.game.rst  sgbackup.gui-app.rst  sgbackup.gui-data.rst  sgbackup.gui-dialogs.rst  sgbackup.gui-widgets.rst  sgbackup.gui.rst  sgbackup.rst
