[build-system]
builbackend = 'setuptools.build_meta'
requires = ['setuptools >= 61.0']

[project]
dynamic = ["version"]
name = 'sgbackup'
version = '0.0.0'
requires_python = '>= 3.11'
description = 'Savegame Backup Tool'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [
  {name = 'Christian Moser', email = 'christian@mydevel.at'},
]
dependencies = ['gi','yaml']

[project.scripts]
sgbackup = 'sgbackup:cli_main'
csgbackup = 'sgbackup:curses_main'

[project.gui-scripts]
gsgbackup = 'sgbackup:gui_main'

