[build-system]
builbackend = 'setuptools.build_meta'
requires = ['setuptools >= 61.0']

[project]
dynamic = ["version"]
name = 'sgbackup'
#version = '0.0.0'
requires-python = '>= 3.11'
description = 'Savegame Backup Tool'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [
  {name = 'Christian Moser', email = 'christian@mydevel.at'},
]
dependencies = ['PyGObject','rapidfuzz']

[project.scripts]
sgbackup = 'sgbackup:cli_main'
csgbackup = 'sgbackup:curses_main'

[project.gui-scripts]
gsgbackup = 'sgbackup:gui_main'

[tool.setuptools]
include-package-data = true
packages = ["sgbackup","sgbackup.archiver","sgbackup.commands","sgbackup.gui"]
package-data = {"sgbackup"=["sgbackup/icons/*.ico","sgbackup/icons/hicolor/*/*/*","sgbackup/icons/hicolor/*/*/*/*"]}

#[tool.setuptools.packages.find]
#namespaces = false 
#where = ["."]
#include = []
#exclude = [".venv","sphinx","apidoc","scripts"]

